# uavf_2026

./: .gitignore  .pre-commit-config.yaml  README.md  esc_read.py  pyproject.toml  setup.py
.github/workflows/: ruff.yaml
logs/: .gitignore  to_chart.py  to_video.py
src/integration/: bar.py
src/perception/: __init__.py
tests/perception/: 1731172134.120311488.json  804.json  projection_test.py
tests/perception/camera/: test_crc16.py
tests/shared/: pose_test.py
uavf_2025/gnc/: README.md  __init__.py  commander_node.py  constants.py  djikstras.py  dropzone_planner.py  geofence.py  mapping_custom.py  mapping_tsp.py  routing.py  util.py
uavf_2025/gnc/dev/: FRR_ocma_demo.py  clean_mission.py  cleanup.sh  commander_node_demo.py  diagnostic_check.py  drop_zone_planner_demo.py  estop_failsafe.py  gcs_mission.gpx  ocma_demo.py  send_geofence.py  start_mavros.py  start_mission.sh
uavf_2025/gnc/gcs/: coord_server.service  get_waypoints_server.py  get_waypoints_server.service  start_coords_server.sh  upload_coord_server.py
uavf_2025/gnc/gcs/data/: lab.gpx  (+25 more)
uavf_2025/perception/: README.md  __init__.py  perception.py  types.py
uavf_2025/perception/camera/: __init__.py  auto_gimballed_cam.py  calibration.py  camera.py  csi_cam.py  dummy_cam.py  gimballed_camera.py  mock_camera.py  project.py  replay_camera.py  usb_cam.py
uavf_2025/shared/: __init__.py  connection_tester.py  drone_pose_provider.py  ensure_ros.py  esp_linker.py  generation_utils.py  git_info.py  payload.py  payload_manager.py  pdb_linker.py  pdb_monitor.py  types.py  util.py  utilization_logging.py
(+50 files in other folders)
